--- a/index.html
+++ b/index.html
@@ -5,31 +5,133 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ልማት Hub | Ethiopia 2026</title>
     <style>
-        /* General Reset */
         * { scroll-behavior: smooth; box-sizing: border-box; }
-        body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; background: #ffffff; color: #333; }
+        body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; background: #f8f9fa; color: #333; line-height: 1.6; }
         
         /* Navigation */
         nav { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
         .logo { font-weight: bold; font-size: 1.8rem; color: #003973; text-decoration: none; }
         .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
-        .btn-join { background: #2E7D32; color: white !important; padding: 10px 25px; border-radius: 5px; font-weight: bold; }
+        .btn-join { background: #2E7D32; color: white !important; padding: 10px 25px; border-radius: 5px; font-weight: bold; text-decoration: none; }
 
-        /* HOME PAGE SECTION */
-        .hero { padding: 100px 5%; text-align: left; background: white; border-bottom: 8px solid #FFD700; }
-        .hero h1 { font-size: 4.5rem; color: #003973; margin: 0; font-weight: 800; }
-        .hero p { font-size: 1.5rem; color: #555; max-width: 700px; margin: 20px 0; }
-        .btn-start { background: #2E7D32; color: white; padding: 15px 35px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; font-size: 1.2rem; }
+        /* Hero Section */
+        .hero { padding: 100px 5%; background: white; text-align: center; border-bottom: 8px solid #FFD700; }
+        .hero h1 { font-size: 4rem; color: #003973; margin: 0; }
+        .hero p { font-size: 1.4rem; color: #555; margin: 20px 0; }
 
-        /* SCHEDULE TABLE */
-        .roadmap-section { padding: 80px 5%; background: #f8f9fa; }
-        .roadmap-container { background: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); overflow-x: auto; }
-        table { width: 100%; border-collapse: collapse; min-width: 700px; }
+        /* Roadmap Table */
+        .section-padding { padding: 80px 5%; }
+        .roadmap-container { background: white; padding: 30px; border-radius: 10px; overflow-x: auto; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
+        table { width: 100%; border-collapse: collapse; min-width: 600px; }
         th { background: #003973; color: white; padding: 15px; text-align: left; }
         td { padding: 15px; border-bottom: 1px solid #eee; }
-        .week-label { font-weight: bold; color: #003973; background: #eef4ff; padding: 4px 10px; border-radius: 4px; }
 
-        /* FAYDA SYNC SECTION */
-        .fayda-section { padding: 80px 5%; background: #003973; color: white; text-align: center; }
+        /* Fayda Sync */
+        .fayda-section { background: #003973; color: white; text-align: center; }
         .fayda-card { max-width: 600px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; background: rgba(255,255,255,0.05); }
-        .fayda-input { padding: 15px; width: 100%; border-radius
+        .fayda-input { padding: 15px; width: 100%; border-radius: 5px; margin-bottom: 20px; font-size: 1.2rem; text-align: center; border: none; }
+        .fayda-btn { width: 100%; padding: 18px; background: #FFD700; color: #003973; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; font-size: 1.2rem; }
+
+        /* FAQ & Contact */
+        .faq-item { margin-bottom: 20px; border-left: 5px solid #FFD700; padding-left: 20px; }
+        .contact-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px; margin-top: 30px; }
+        .contact-card { background: white; padding: 30px; border-radius: 10px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
+    </style>
+</head>
+<body>
+
+<nav>
+    <a href="#home" class="logo">ልማት Hub</a>
+    <div class="nav-links">
+        <a href="#home">Home</a>
+        <a href="#schedule">Schedule</a>
+        <a href="#faq">FAQ</a>
+        <a href="#contact">Contact</a>
+        <a href="#signup" class="btn-join">Verify Fayda ID</a>
+    </div>
+</nav>
+
+<section class="hero" id="home">
+    <h1>ልማት Hub</h1>
+    <p>Ethiopia's 2026 Digital Mission. Verified by Fayda.</p>
+</section>
+
+<section class="fayda-section section-padding" id="signup">
+    <div class="fayda-card">
+        <h2>Fayda One-Click Sync</h2>
+        <p>No forms needed. We sync your profile from the National ID system.</p>
+        <input type="text" placeholder="Enter Fayda ID Number" class="fayda-input">
+        <button class="fayda-btn" onclick="alert('Profile Found! Welcome to the 2026 Cohort.')">VERIFY & JOIN PROGRAM</button>
+    </div>
+</section>
+
+<section class="section-padding" id="schedule">
+    <h2 style="color: #003973; text-align: center; font-size: 2.5rem; margin-bottom: 30px;">12-Week Roadmap</h2>
+    <div class="roadmap-container">
+        <table>
+            <thead>
+                <tr>
+                    <th>Weeks</th>
+                    <th>Module Topic</th>
+                    <th>Learning Outcome</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1 - 4</td>
+                    <td>Python Mastery</td>
+                    <td>Core Logic & Automation</td>
+                </tr>
+                <tr>
+                    <td>5 - 8</td>
+                    <td>AI Integration</td>
+                    <td>Prompt Engineering & LLMs</td>
+                </tr>
+                <tr>
+                    <td>9 - 12</td>
+                    <td>Career Prep</td>
+                    <td>Remote Jobs & 2026 Placement</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</section>
+
+<section class="section-padding" style="background: #fff;" id="faq">
+    <h2 style="color: #003973; text-align: center; margin-bottom: 40px;">Frequently Asked Questions</h2>
+    <div style="max-width: 800px; margin: 0 auto;">
+        <div class="faq-item">
+            <h3>Is my data safe with Fayda?</h3>
+            <p>Yes, we only access verified student status through the official National ID secure gateway.</p>
+        </div>
+        <div class="faq-item">
+            <h3>Who can join ልማት Hub?</h3>
+            <p>Any Ethiopian student with a valid Fayda ID who wants to master AI and Python for 2026 opportunities.</p>
+        </div>
+    </div>
+</section>
+
+<section class="section-padding" id="contact">
+    <h2 style="color: #003973; text-align: center;">Get in Touch</h2>
+    <div class="contact-grid">
+        <div class="contact-card">
+            <h3>Email Us</h3>
+            <p>support@lemathub.et</p>
+        </div>
+        <div class="contact-card">
+            <h3>Location</h3>
+            <p>Addis Ababa, Ethiopia</p>
+        </div>
+        <div class="contact-card">
+            <h3>Support Hours</h3>
+            <p>Mon - Fri: 9:00 AM - 5:00 PM</p>
+        </div>
+    </div>
+</section>
+
+<footer style="text-align: center; padding: 30px; background: #222; color: #fff;">
+    <p>&copy; 2026 ልማት Hub | Official Fayda Partner</p>
+</footer>
+
+</body>
+</html>
