--- a/index.html
+++ b/index.html
@@ -5,30 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ልማት Hub | Ethiopia 2026</title>
     <style>
-        * { scroll-behavior: smooth; box-sizing: border-box; }
-        body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; background: #ffffff; color: #333; line-height: 1.6; }
-        
-        nav { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-        .logo { font-weight: bold; font-size: 1.8rem; color: #003973; text-decoration: none; }
-        .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
-        .btn-join { background: #2E7D32; color: white !important; padding: 10px 25px; border-radius: 5px; font-weight: bold; text-decoration: none; }
-
-        .section-padding { padding: 80px 5%; }
-        .hero { text-align: center; border-bottom: 8px solid #FFD700; background: #fff; }
-        .hero h1 { font-size: 4rem; color: #003973; margin: 0; }
-        .hero p { font-size: 1.4rem; color: #555; margin: 20px 0; }
-
-        .fayda-section { background: #003973; color: white; text-align: center; }
-        .fayda-card { max-width: 650px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; background: rgba(255,255,255,0.05); }
-        .fayda-input { padding: 15px; width: 100%; border-radius: 5px; margin-bottom: 20px; font-size: 1.2rem; text-align: center; border: none; }
-        .fayda-btn { width: 100%; padding: 18px; background: #FFD700; color: #003973; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; font-size: 1.2rem; }
-
-        .roadmap-container { background: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.08); overflow-x: auto; }
-        table { width: 100%; border-collapse: collapse; min-width: 700px; }
+        body { margin: 0; font-family: 'Segoe UI', sans-serif; line-height: 1.6; color: #333; }
+        nav { background: white; padding: 1rem 5%; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 1000; }
+        .logo { font-size: 1.5rem; font-weight: bold; color: #003973; text-decoration: none; }
+        .btn-join { background: #2E7D32; color: white; padding: 10px 20px; border-radius: 5px; text-decoration: none; font-weight: bold; }
+        .hero { text-align: center; padding: 80px 5%; background: #f9f9f9; }
+        .fayda-box { max-width: 600px; margin: 40px auto; background: #003973; color: white; padding: 40px; border-radius: 15px; border: 2px solid #FFD700; text-align: center; }
+        .fayda-input { width: 100%; padding: 15px; margin: 20px 0; border-radius: 5px; border: none; font-size: 1rem; }
+        .fayda-btn { width: 100%; padding: 15px; background: #FFD700; color: #003973; border: none; font-weight: bold; cursor: pointer; border-radius: 5px; font-size: 1.1rem; }
+        table { width: 90%; margin: 20px auto; border-collapse: collapse; background: white; box-shadow: 0 5px 15px rgba(0,0,0,0.05); }
         th { background: #003973; color: white; padding: 15px; text-align: left; }
         td { padding: 15px; border-bottom: 1px solid #eee; }
-        .week-tag { font-weight: bold; color: #003973; background: #eef4ff; padding: 4px 10px; border-radius: 4px; }
-
-        .faq-item { background: #f9f9f9; padding: 20px; border-radius: 8px; margin-bottom: 15px; border-left: 5px solid #003973; }
-        .contact-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-top: 30px; }
-        .
+        footer { background: #111; color: white; text-align: center; padding: 40px; margin-top: 60px; }
+    </style>
+</head>
+<body>
+<nav>
+    <a href="#" class="logo">ልማት Hub</a>
+    <div>
+        <a href="#schedule" style="margin-right:20px; text-decoration:none; color:#333;">Roadmap</a>
+        <a href="#signup" class="btn-join">Verify Fayda ID</a>
+    </div>
+</nav>
+<section class="hero">
+    <h1>ልማት Hub</h1>
+    <p>The 2026 Digital Gateway for Ethiopia. Powered by National ID.</p>
+</section>
+<section id="signup">
+    <div class="fayda-box">
+        <h2>Fayda One-Click Sync</h2>
+        <p>No forms needed. We pull your profile from the National ID system.</p>
+        <input type="text" placeholder="Enter Fayda ID Number" class="fayda-input">
+        <button class="fayda-btn" onclick="alert('Profile Verified!')">VERIFY & JOIN PROGRAM</button>
+    </div>
+</section>
+<section id="schedule">
+    <h2 style="text-align:center; color:#003973;">Your 12-Week Roadmap</h2>
+    <table>
+        <thead>
+            <tr><th>Weeks</th><th>Module Topic</th><th>Learning Outcome</th></tr>
+        </thead>
+        <tbody>
+            <tr><td>1 - 4</td><td><b>Python mastery</b></td><td>Logic and Automation.</td></tr>
+            <tr><td>5 - 8</td><td><b>AI Engineering</b></td><td>LLMs & Prompting.</td></tr>
+            <tr><td>9 - 12</td><td><b>Career Launch</b></td><td>International Remote Work.</td></tr>
+        </tbody>
+    </table>
+</section>
+<footer>
+    <p>&copy; 2026 ልማት Hub | Official Fayda Partner</p>
+</footer>
+</body>
+</html>
