--- a/index.html
+++ b/index.html
@@ -1,117 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Ethiopia 2026 Elite</title>
-    <style>
-        /* GLOBAL RESET - DO NOT DELETE */
-        * { scroll-behavior: smooth; box-sizing: border-box; margin: 0; padding: 0; }
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #ffffff; color: #333; line-height: 1.6; }
-        
-        /* NAVIGATION DESIGN */
-        nav { background: #ffffff; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-        .logo { font-weight: bold; font-size: 1.8rem; color: #003973; text-decoration: none; }
-        .nav-links { display: flex; align-items: center; }
-        .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; font-size: 1rem; transition: 0.3s; }
-        .nav-links a:hover { color: #003973; }
-        .btn-join { background: #2E7D32; color: white !important; padding: 10px 20px; border-radius: 5px; }
-
-        /* HERO SECTION */
-        section { padding: 100px 5%; width: 100%; border-bottom: 1px solid #eee; text-align: center; }
-        .hero { background: #f8f9fa; }
-        .hero h1 { font-size: 4rem; color: #003973; margin-bottom: 10px; }
-        .hero p { font-size: 1.2rem; color: #666; max-width: 700px; margin: 0 auto; }
-
-        /* FAYDA SYNC DESIGN */
-        .fayda-section { background: #003973; color: white; }
-        .fayda-card { max-width: 650px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; background: rgba(255,255,255,0.05); }
-        .fayda-input { padding: 18px; width: 100%; border-radius: 8px; margin-bottom: 20px; font-size: 1.2rem; text-align: center; border: none; outline: none; }
-        .fayda-btn { width: 100%; padding: 18px; background: #FFD700; color: #003973; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 1.2rem; text-transform: uppercase; }
-
-        /* ROADMAP TABLE */
-        .table-container { background: white; padding: 25px; border-radius: 12px; box-shadow: 0 5px 25px rgba(0,0,0,0.1); overflow-x: auto; margin-top: 30px; }
-        table { width: 100%; border-collapse: collapse; min-width: 600px; text-align: left; }
-        th { background: #003973; color: white; padding: 18px; font-size: 1.1rem; }
-        td { padding: 18px; border-bottom: 1px solid #eee; font-size: 1rem; }
-
-        /* FAQ & CONTACT SECTIONS */
-        .faq-grid { max-width: 800px; margin: 0 auto; text-align: left; }
-        .faq-item { background: #f9f9f9; padding: 25px; border-radius: 8px; margin-bottom: 15px; border-left: 6px solid #003973; }
-        .contact-info { background: #003973; color: white; padding: 40px; border-radius: 12px; display: inline-block; margin-top: 20px; }
-
-        footer { background: #111; color: white; padding: 50px 5%; text-align: center; }
-    </style>
-</head>
-<body>
-
-<nav>
-    <a href="#home" class="logo">ልማት Hub</a>
-    <div class="nav-links">
-        <a href="#home">Home</a>
-        <a href="#schedule">Schedule</a>
-        <a href="#faq">FAQ</a>
-        <a href="#contact">Contact</a>
-        <a href="#signup" class="btn-join">Verify Fayda ID</a>
-    </div>
-</nav>
-
-<section class="hero" id="home">
-    <h1>ልማት Hub</h1>
-    <p>The 2026 Digital Gateway for Ethiopia. Powered by National ID.</p>
-</section>
-
-<section class="fayda-section" id="signup">
-    <div class="fayda-card">
-        <h2>Fayda One-Click Sync</h2>
-        <p style="margin-bottom: 25px; opacity: 0.9;">No forms needed. We sync your profile directly from the National ID system.</p>
-        <input type="text" placeholder="Enter Fayda ID Number" class="fayda-input">
-        <button class="fayda-btn" onclick="alert('Connecting to National ID System...')">VERIFY & JOIN PROGRAM</button>
-    </div>
-</section>
-
-<section id="schedule">
-    <h2 style="font-size: 2.5rem; color: #003973; margin-bottom: 10px;">Academy Roadmap</h2>
-    <div class="table-container">
-        <table>
-            <thead>
-                <tr><th>Weeks</th><th>Module Topic</th><th>Learning Outcome</th></tr>
-            </thead>
-            <tbody>
-                <tr><td>1 - 4</td><td><b>Python Foundations</b></td><td>Advanced Logic & Automation Scripts.</td></tr>
-                <tr><td>5 - 8</td><td><b>AI Engineering</b></td><td>Building & Deploying Custom LLMs.</td></tr>
-                <tr><td>9 - 12</td><td><b>Global Placement</b></td><td>International Career & Security Clearance.</td></tr>
-            </tbody>
-        </table>
-    </div>
-</section>
-
-<section id="faq">
-    <h2 style="font-size: 2.5rem; color: #003973; margin-bottom: 30px;">Frequently Asked Questions</h2>
-    <div class="faq-grid">
-        <div class="faq-item">
-            <h3 style="margin-bottom:10px;">Is the Fayda ID mandatory?</h3>
-            <p>Yes, to ensure high-security placement in the 2026 elite tech sector.</p>
-        </div>
-        <div class="faq-item">
-            <h3 style="margin-bottom:10px;">Is this a remote program?</h3>
-            <p>Yes, all training is digital and designed for global remote work standards.</p>
-        </div>
-    </div>
-</section>
-
-<section id="contact" style="background: #fdfdfd;">
-    <h2 style="font-size: 2.5rem; color: #003973;">Get In Touch</h2>
-    <div class="contact-info">
-        <p><strong>Official Email:</strong> contact@lemathub.et</p>
-        <p><strong>HQ:</strong> Addis Ababa, Ethiopia</p>
-    </div>
-</section>
-
-<footer>
-    <p style="font-size: 1.1rem;">&copy; 2026 ልማት Hub | Official Fayda Partner</p>
-    <p style="margin-top: 10px; opacity: 0.6;">Ethiopia 2026 Digital Mission</p>
-</footer>
-
-</body>
-</html>
+<div class="nav-links">
+    <a href="#home">Home</a>
+    <a href="#schedule">Roadmap</a>
+    <a href="#courses">Extended Courses</a> <a href="#faq">FAQ</a>
+    <a href="#contact">Contact</a>
+    <a href="#signup" class="btn-join">Verify Fayda ID</a>
+</div>
