--- a/index.html
+++ b/index.html
@@ -5,25 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ልማት Hub | Ethiopia 2026</title>
     <style>
-        /* This part makes the "jumping" smooth when you touch a button */
         * { scroll-behavior: smooth; box-sizing: border-box; margin: 0; padding: 0; }
         body { font-family: 'Segoe UI', sans-serif; background: #ffffff; color: #333; line-height: 1.6; }
         
-        /* Nav Bar Design */
+        /* Navigation */
         nav { background: #fff; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
         .logo { font-weight: bold; font-size: 1.8rem; color: #003973; text-decoration: none; }
         .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
         .btn-join { background: #2E7D32; color: white !important; padding: 10px 20px; border-radius: 5px; }
 
-        /* Section Spacing */
-        section { padding: 100px 5%; text-align: center; border-bottom: 1px solid #eee; min-height: 400px; }
+        section { padding: 80px 5%; text-align: center; border-bottom: 1px solid #eee; }
         .hero { background: #f8f9fa; }
         
-        /* Fayda Card */
-        .fayda-section { background: #003973; color: white; }
-        .fayda-card { max-width: 600px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; }
-        .fayda-input { width: 100%; padding: 15px; margin: 20px 0; border-radius: 8px; border: none; font-size: 1.1rem; text-align: center; }
-        .fayda-btn { width: 100%; padding: 18px; background: #FFD700; color: #003973; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 1.2rem; }
+        /* Roadmap Table */
+        .table-container { max-width: 800px; margin: 20px auto; overflow-x: auto; background: white; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
+        table { width: 100%; border-collapse: collapse; text-align: left; }
+        th { background: #003973; color: white; padding: 15px; }
+        td { padding: 15px; border-bottom: 1px solid #eee; }
 
-        /* Course Grid */
-        .course-grid { display: grid; grid-template-columns: repeat(auto-fit, min
+        /* Courses */
+        .course-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 30px; }
+        .course-card { background: white; padding: 25px; border-radius: 12px; box-shadow:
