--- a/index.html
+++ b/index.html
@@ -5,33 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ልማት Hub | Ethiopia 2026</title>
     <style>
-        /* This part makes the "jumping" smooth when you touch a button */
         * { scroll-behavior: smooth; box-sizing: border-box; margin: 0; padding: 0; }
         body { font-family: 'Segoe UI', sans-serif; background: #ffffff; color: #333; line-height: 1.6; }
-        
-        /* Nav Bar Design */
         nav { background: #fff; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
         .logo { font-weight: bold; font-size: 1.8rem; color: #003973; text-decoration: none; }
         .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
         .btn-join { background: #2E7D32; color: white !important; padding: 10px 20px; border-radius: 5px; }
-
-        /* Section Spacing */
-        section { padding: 100px 5%; text-align: center; border-bottom: 1px solid #eee; min-height: 400px; }
-        .hero { background: #f8f9fa; }
-        
-        /* Fayda Card */
+        section { padding: 100px 5%; text-align: center; border-bottom: 1px solid #eee; min-height: 450px; }
         .fayda-section { background: #003973; color: white; }
         .fayda-card { max-width: 600px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; }
-        .fayda-input { width: 100%; padding: 15px; margin: 20px 0; border-radius: 8px; border: none; font-size: 1.1rem; text-align: center; }
-        .fayda-btn { width: 100%; padding: 18px; background: #FFD700; color: #003973; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 1.2rem; }
-
-        /* Course Grid */
         .course-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; margin-top: 40px; }
-        .course-card { background: white; padding: 30px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); border-top: 5px solid #003973; text-align: left; }
-        .course-tag { background: #eef2f7; color: #003973; padding: 5px 10px; font-size: 0.8rem; font-weight: bold; border-radius: 4px; display: inline-block; margin-bottom: 10px; }
-
-        /* FAQ & Contact Items */
-        .faq-item { background: #f9f9f9; padding: 20px; border-radius: 8px; margin-bottom: 10px; text-align: left; border-left: 5px solid #003973; max-width: 800px; margin-left: auto; margin-right: auto; }
+        .course-card { background: white; padding: 30px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); border-top: 5px solid #003973; text-align: left; color: #333; }
     </style>
 </head>
 <body>
@@ -48,52 +32,40 @@
     </div>
 </nav>
 
-<section id="home" class="hero">
+<section id="home" style="background: #f8f9fa;">
     <h1>ልማት Hub</h1>
-    <p>Ethiopia's 2026 Elite Digital Mission. Powered by National ID.</p>
+    <p>Ethiopia's 2026 Digital Mission. Powered by National ID.</p>
 </section>
 
 <section id="signup" class="fayda-section">
     <div class="fayda-card">
         <h2>Fayda One-Click Sync</h2>
-        <p>Verified profile sync from the National ID system.</p>
-        <input type="text" placeholder="Enter Fayda ID Number" class="fayda-input">
-        <button class="fayda-btn" onclick="alert('Connecting...')">VERIFY & JOIN</button>
+        <input type="text" placeholder="Enter Fayda ID" style="width:100%; padding:15px; margin:20px 0; border-radius:8px;">
+        <button style="width:100%; padding:15px; background:#FFD700; color:#003973; font-weight:bold; border:none; border-radius:8px;">VERIFY & JOIN</button>
     </div>
 </section>
 
 <section id="schedule">
-    <h2 style="color: #003973; font-size: 2.5rem;">12-Week Roadmap</h2>
-    <p>Phase 1: Python Mastery | Phase 2: AI Engineering | Phase 3: Global Placement.</p>
+    <h2>12-Week Roadmap</h2>
+    <p>Python Foundations → AI Engineering → Global Careers.</p>
 </section>
 
 <section id="courses">
-    <h2 style="color: #003973; font-size: 2.5rem;">Specialized 2026 Tracks</h2>
+    <h2>Specialized 2026 Tracks</h2>
     <div class="course-grid">
-        <div class="course-card">
-            <span class="course-tag">SECURITY</span>
-            <h3>Cyber Defense</h3>
-            <p>Master encryption and threat detection for 2026 systems.</p>
-        </div>
-        <div class="course-card">
-            <span class="course-tag">DATA</span>
-            <h3>Big Data Analytics</h3>
-            <p>Analyze massive datasets using cloud-native infrastructure.</p>
-        </div>
+        <div class="course-card"><h3>Cyber Defense</h3><p>Security for 2026 systems.</p></div>
+        <div class="course-card"><h3>Big Data</h3><p>Cloud-native analytics.</p></div>
     </div>
 </section>
 
 <section id="faq">
-    <h2 style="color: #003973; margin-bottom: 30px;">FAQ</h2>
-    <div class="faq-item">
-        <h3>Is it official?</h3>
-        <p>Yes, we are the primary gateway for 2026 digital enrollment.</p>
-    </div>
+    <h2>FAQ</h2>
+    <p>The program is scholarship-based for all verified Fayda holders.</p>
 </section>
 
 <section id="contact">
-    <h2 style="color: #003973;">Contact Us</h2>
-    <p>Email: contact@lemathub.et | Addis Ababa, Ethiopia</p>
+    <h2>Contact Us</h2>
+    <p>Addis Ababa, Ethiopia | contact@lemathub.et</p>
 </section>
 
 <footer style="padding: 40px; text-align: center; background: #111; color: white;">
